fourth attempt at fixing the viewport issue with the background on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -17,13 +17,11 @@
   box-sizing: border-box;
 }
 
-body,
-html {
-  margin: 0;
-  padding: 0;
-  overflow: auto;
+html,
+body {
   height: 100%;
-  -webkit-overflow-scrolling: touch;
+  overflow-x: hidden;
+  overscroll-behavior: none;
 }
 
 html {
